crates/evaluator/src/snapshots/kclvm_evaluator__tests__aug_assign_stmt_12.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
a:
- 1
- 0
- 0
- 0
- 0
