crates/evaluator/src/snapshots/kclvm_evaluator__tests__compare_expr_0.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
a: true
b: true
c: false
d: false
