crates/evaluator/src/snapshots/kclvm_evaluator__tests__expr_stmt_1.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
2.0

